lab1/Test/L1-A-12-61.output
Error Type B at Line 13
Error Type A at Line 17
Error Type A at Line 25
Error Type A at Line 26
Error Type A at Line 37
Error Type A at Line 42
