lab1/Test/L1-A-12-61.cmm
float ;
int aQskZXDWZg ( int kDJSg5Gb3W0 ) {
  int Q3ce9mqjGt9 ;
  int kycYllLAWesTnQ , hdv2QMe1xPTWrX5y ;
}
struct {
  int zI2mVD2iPPM11xQhnk = GGnoYYs0HU5DzDaXgED = WeUBf5SJKAQG 
    || Itx3JR0YA && mCG0Z0ygdRgmJfMQcX >= YgpFBq0M * - 
    ! PHqK8tt6u7mtn3Q [ o2wCcWadPqaqUxwcnZwK = XS5a9whhfWEQxV5Va5 
    != AJlIuk + ( Us = wXh7ZiG = rWaBMH_PaA8UysguC9ZN 
    = hCBfUllb && n0 > oEf2eUms6LyEMovR_T - LW8SC6LB1VP_R75BifI 
    / C ( Akc57iVF6Rh_ , c || rhTqeesjzC13OyWOre [ ut8UkJ9Kaq3xd 
    <= sSs4Fto < ODtHnf6MdzS + . gUYf_tSejeCBTxxs == 1421302934 
    ] / pvfciAOUw ) / ! isuG0WGMilTMwk ( ) . CD2UaKgEylxIAe 
    ) ] ;
}sH4 [ 1442771993 ] 
;\
int ;
struct uWULgA ;
int Jrxn6g_kHC5JNSDmo , jhLUlN4WUIZ 

;
struct nQoD {
};
#int ;
int ~;
int yvjlVvU5iC ( ) {
  if ( aKn1Uyf1 )   S19N0GDVt ;

}
int ;
int UUyiwriGiKieZ0fipFwE ( int moEF4970Re , int oMXngUh 
  ) {
  if ( cHfzNI9WocNaU ) {
  }else   return O0YB5Kc ;

#}
int ;
int ;
int ;
int bLjnJlEaPefv ( ) {
  if ( PELfTZwANazWgjLXzky \)   fJe1XTR9Zht ;
else   if ( g8Kn_jFpEuHtIfx )   nb9EgD6 ;


  while ( zZxomOU6XRcv__d31Lp )   while ( ze )   AHNI5Q8vj 
    ;


}
